[project]
name = "uv-bench-cpu-ml"
version = "0"
requires-python = "==3.13.*"
dependencies = [
  "torch>=2.0",
  "transformers>=5.0",
  "numpy>=2.0",
  "pandas>=2.0",
  "scikit-learn>=1.0",
  "matplotlib>=3.0",
  "tqdm>=4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
